--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "react-particles": "^2.12.2",
-    "react-toastify": "^10.0.6",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.5.0"
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
